src/pages/BalanceNew/Balance.module.scss
@import 'src/styles/mixins';

.wrapper {
  padding: 32px;

  @include mobile {
    padding: 0;
  }
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  .asset {
    display: flex;
    flex-direction: column;

    .totalAssets {
      font-style: normal;
      font-weight: 600;
      font-size: 24px;
      color: #777e90;
    }

    .balance {
      font-weight: 600;
      font-size: 40px;
      color: #ffffff;
    }
  }
}

.action {
  display: flex;

  @include desktop {
    @media (min-width: 1270px) {
      justify-content: center;
    }
  }
}

.search {
  margin-top: 25px;
  display: flex;

  @include desktop {
    @media (max-width: 1024px) {
      width: 100%;
    }

    @media (max-width: 1270px) {
      width: 100%;
    }

    align-items: center;
    justify-content: space-between;
    width: 50%;
  }

  @include mobile {
    width: 100%;
    flex-direction: column;
  }

  &_filter {
    width: 50%;
    cursor: pointer;

    @include mobile {
      width: 100%;
    }

    background: #2b2d3b;
    text-align: center;
    margin-right: 20px;
    border-radius: 8px;
    padding: 6px 12px;
    height: 56px;
  }

  &_box {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  &_flex {
    display: flex;
    align-items: center;
  }

  &_text {
    font-size: 16px;
    font-weight: 600;
    padding-left: 10px;
  }

  &_form {
    width: 420px;
    background: #2b2d3b;
    border-radius: 8px;
    padding: 12px;
    height: 56px;
    display: flex;
    justify-content: center;
    flex-direction: column;

    @include mobile {
      width: 100% !important;
      margin-top: 20px;
    }
  }

  &_logo {
    display: flex;
    align-items: center;
  }

  input {
    width: 93%;
    font-weight: 600;
    height: 56px;
    font-size: 16px;
    color: white;

    @include mobile {
      margin-top: 12px;
      width: 100%;
    }
  }
}

.transferTab {
  width: 100%;
  display: flex;
  margin-top: 10px;
  flex-direction: row;

  .tfBtn {
    background: #612fca;
    box-shadow: inset 0px -2px 0px #4b2993, inset 1px 2px 0px #804af2;
    border-radius: 8px;
    padding: 16px;
    justify-content: center;
    align-content: center;
    display: flex;
    align-items: center;
    margin-top: 24px;
    cursor: pointer;

    svg {
      margin-right: 5px !important;
    }
  }

  .tfTxt {
    font-weight: 600;
    font-size: 16px;
  }

  @include mobile {
    flex-direction: column;
    align-items: center;
  }
}

.divider {
  width: 100%;
  height: 1px;
  background-color: #2d2938;
  margin-top: 16px;
  margin-bottom: 16px;
}

.tokens {
  display: flex;
  justify-content: center;

  &_form {
    @include desktop {
      @media (max-width: 1024px) {
        width: 100%;
      }

      @media (max-width: 1270px) {
        width: 100%;
      }

      width: 50%;
    }

    @include mobile {
      width: 100%;
    }
  }

  &_element {
    margin-bottom: 20px;
    background-color: #191b21;
    border-radius: 16px;
  }
}

.balances {
  display: flex;
  justify-content: center;
  padding-top: 12px;
  width: 100%;

  .box {
    width: 100%;

    @include desktop {
      @media (max-width: 1024px) {
        width: 100%;
      }

      @media (max-width: 1270px) {
        width: 100%;
      }

      width: 50%;
    }

    display: flex;
    justify-content: space-between;

    .refresh {
      cursor: pointer;
      display: flex;
      align-items: center;

      span {
        padding-right: 8px;
      }

      :hover {
        color: #a871df;
      }
    }
  }
}

